--- a/practice.html
+++ b/practice.html
@@ -11,7 +11,7 @@
 <body>
     <script src="practice.js">
     </script>
-    <h1>Practice</h1>
+    <h1>Rock Paper Scissors</h1>
 </body>
 
 </html>
